<resources>
    <string name="app_name">Pokemon Go Go</string>
    <string name="activate">Start Service</string>
    <string name="deactivate">Stop Service</string>
    <string name="bugreport">Bug/Suggestion Report</string>
    <string name="settings">Settings</string>
    <string name="settings_title">Game Settings</string>
    <string name="settings_skill_title">Skill Settings</string>
    <string name="banner_ad_unit_id">ca-app-pub-6206997118305400/3415399173</string>
    <string name="google_app_id">mu774-cdbb9</string>

    <!-- Start up dialog -->
    <string name="startup_title">Permissive SELinux</string>
    <string name="startup_text">In order to use this app, we need to set SEPolicy to permissive.
        Enabling permissive SEPolicy allows this APP to use whole file system. Do this at your own risk.</string>
    <string name="startup_confirm">Proceed</string>
    <string name="startup_cancel">Cancel</string>
    <string name="startup_cancel_warn">Warning</string>
    <string name="startup_cancel_warntext">You didn\'t permit the permissive SEPolicy request.</string>
    <string name="startup_cancel_exit">Exit</string>
    <string name="startup_permit_system_alarm">Please allow to draw on screen permission.</string>
    <string name="startup_permit_system_alarm_failed">No permission, this App will not run.</string>
    <string name="startup_display_ok">We support your display size: </string>
    <string name="startup_display_not_ok">We don\'t support your display size: </string>
    <string name="startup_display_not_ok_help">You can visit https://github.com/josh-hsu/MU774 to help us supporting your display</string>

    <!-- PointSelectionActivity -->
    <string name="default_point_info">Point info will show in here</string>
    <string name="title_activity_point_selection">Point Selection</string>

    <!-- HeadService -->
    <string name="headservice_how_to_stop">Service started, you can long press the icon to stop it.</string>
    <string name="headservice_stop_title">Stop Service</string>
    <string name="headservice_stop_info">Are you sure you want to stop Pokemon Go Go service?</string>
    <string name="headservice_stop_button">Stop</string>
    <string name="walk_up_button">↑</string>
    <string name="walk_down_button">↓</string>
    <string name="walk_left_button">←</string>
    <string name="walk_right_button">→</string>

    <!-- Preferences -->
    <string name="stage_1">Normal Battle</string>
    <string name="stage_2">Golden House</string>
    <string name="stage_3">Dragon (Not ready)</string>
    <string name="stage_4">Arena (Not ready)</string>

    <!-- Properties -->
    <string name="property_fake_enable">persist.asus.fakegps.enable</string>
    <string name="property_fake_lat">persist.asus.fakegps.lat</string>
    <string name="property_fake_long">persist.asus.fakegps.long</string>
    <string name="property_fake_acc">persist.asus.fakegps.acc</string>
    <string name="property_fake_alt">persist.asus.fakegps.alt</string>

    <!-- Intent properties -->
    <string name="intent_enable">enable</string>
    <string name="intent_lat">lat</string>
    <string name="intent_lng">lng</string>
    <string name="intent_acc">acc</string>
    <string name="intent_alt">alt</string>

    <!-- Msg and Maps -->
    <string name="msg_map_navigating">Receive map location, navigating..</string>
    <string name="msg_map_teleporting">Receive map location, SHU --- !!!</string>
    <string name="msg_start_incubating">Start Auto Incubating</string>
    <string name="msg_stop_incubating">Stop Auto Incubating</string>
    <string name="msg_stop_incubating_forcely">You are incubating, cancel first</string>
    <string name="msg_no_sdcard_perms">User didn\'t give us permission to write sdcard</string>
    <string name="msg_map_no_point">You didn\'t long press to select a point</string>
    <string name="msg_map_cancelled">You cancelled navigation</string>
    <string name="msg_map_shu">Shu ----- !!!!</string>
    <string name="msg_map_locating">Locating to your current location</string>
    <string name="msg_map_navi_done">Navigation completed</string>

    <!-- Auto Incubating map view -->
    <string name="msg_map_drag_bar">Drag the bar to select incubating radius</string>
    <string name="map_radius">Radius = </string>
    <string name="map_radius_unit"> meters</string>
    <string name="msg_map_rectangle_bar_1">Drag the bar to shrink or expand rectangle</string>
    <string name="msg_map_rectangle_bar_2">Drag the bar to adjust size</string>

    <!-- Menu -->
    <string name="menu_cancel">Cancel</string>
    <string name="menu_finish">Finish</string>
    <string name="menu_config_shape">Shape Config</string>
    <string name="menu_teleport">Teleport</string>
    <string name="menu_navigate">Navigate</string>

</resources>
